# caramel

./: .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md  main.cpp  path-guiding-notes.md
.github/workflows/: build_macos_appleclang.yml  build_macos_clang.yml  build_test_build_macos_clang.yml  build_test_macos_appleclang.yml  build_test_windows_clang.yml  build_test_windows_msvc.yml  build_windows_clang.yml  build_windows_msvc.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  caramel  caramel_test  cmake_install.cmake
_codeql_build_dir/ext/peanut/: Makefile  cmake_install.cmake
docs/: microfacet_rough_bsdf_guide.md  particle_tracing_plan.md
docs/superpowers/: curve-implementation-guide.html
docs/superpowers/specs/: 2026-06-17-pbrt-to-caramel-island-design.md
examples/curves/: cylinder_hair.json  flat_grass.json  ribbon_leaves.json
gui_src/: application.cpp  application.h  camera_controller.cpp  camera_controller.h  gui_main.cpp  preview_renderer.cpp  preview_renderer.h  progressive_renderer.cpp  progressive_renderer.h
include/: aabb.h  acceleration.h  bsdf.h  bvh.h  bvh_base.h  camera.h  common.h  coordinate.h  distrib1D.h  distribution.h  image.h  integrators.h  light.h  logger.h  mesh_accel.h  microfacet_distrib.h  microfacets.h  parallel_for.h  polygon_sampling.h  progress.h  ray.h  rayintersectinfo.h  render.h  sampler.h  scene.h  scene_accel.h  scene_parser.h  shape.h  textures.h  transform.h  warp_sample.h
scenes/: render_gt.sh
scenes/ajax/: README.md  scene.json
scenes/cbox/: mitsuba.xml  scene.json  scene_test_gt.exr
scenes/cbox-caustic/: LICENSE.txt  scene.json
scenes/cbox_envmap/: mitsuba.xml  scene.json
scenes/diamonds/: README.md  scene.json
scenes/dragon/: README.md  scene.json
scenes/shaderball/: README.md  mitsuba.xml  scene.json
scenes/shaderballs/: README.md  gt_test.exr  mitsuba.xml  scene.json
scenes/stormtrooper/: README.md  scene.json
scenes/test1/: scene.json
scenes/test_scenes/test1/: gt.exr  scene.json
scenes/test_scenes/test2/: scene.json
scenes/test_scenes/test3/: scene.json
scenes/test_scenes/test4/: scene.json
scenes/test_scenes/test5/: scene_conductor.json  scene_dielectric.json  scene_diffuse.json  scene_mirror.json
scenes/test_scenes/test6/: envmap.exr  scene.json
scenes/veach_door/: README.md  mitsuba.xml  scene.json
scenes/veach_mis/: README.md  gt_test.exr  scene.json
src/: aabb.cpp  acceleration.cpp  bvh_base.cpp  camera.cpp  image.cpp  integrators.cpp  light.cpp  progress.cpp  rayintersectinfo.cpp  render.cpp  scene.cpp  scene_parser.cpp  shape.cpp
src/bsdfs/: bsdf.cpp  conductor.cpp  dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp  orennayar.cpp  roughconductor.cpp  roughdielectric.cpp  twosided.cpp
src/bsdfs/microfacets/: beckmann.cpp
src/cameras/: camera.cpp  pinhole.cpp  thinlens.cpp
src/integrators/: Integrator.cpp  MCIntegrator.cpp  bdpt.cpp  depth.cpp  direct.cpp  hitpos.cpp  integrators.cpp  normal.cpp  particle.cpp  path.cpp  uv.cpp
src/lights/: area.cpp  constantEnvLight.cpp  envmap.cpp  imageEnvLight.cpp  light.cpp  point.cpp
src/mesh_accel/: bvh.cpp  bvh_mesh.cpp  naive.cpp  octree.cpp
src/samplers/: uniformstd.cpp
src/scene_accel/: bvh_scene.cpp
src/scenes/: ajax.cpp  bunny.cpp  cbox.cpp  logo1.cpp
src/shapes/: curve.cpp  inline_triangle_mesh.cpp  instance.cpp  objmesh.cpp  plymesh.cpp  shape.cpp  triangle.cpp  triangle_mesh.cpp
src/textures/: image_texture.cpp
test/: chi2_bsdf_test.cpp  chi2_microfacet_distrib_test.cpp  chi2_polygon_test.cpp  compare_exr.cpp  complex_render_test.cpp  render_test.cpp  simple_render_test.cpp  test_ray_intersection.cpp  unit_tests.cpp  utils.cpp  utils.h
test_scenes/: cbox.json
test_scenes/ajax/: test.xml
test_scenes/bunny/: bunny.json  test.xml
test_scenes/case1/: caramel_test1.exr  caramel_test1_normal.exr  caramel_test1_uv.exr  test.exr  test.xml
test_scenes/case2/: caramel_test2.exr  test.exr  test.xml
test_scenes/case3/: caramel_test2.exr  caramel_test3.exr  test.exr  test.xml
test_scenes/case4/: caramel_test4.exr  caramel_test_normal.exr  test.exr  test.xml  test_hitpos.exr  test_normal.exr  test_normal.xml
test_scenes/case5/: caramel_test_hitpos.exr  caramel_test_normal.exr  test.exr  test.xml  test_hitpos.xml  test_normal.exr  test_normal.xml
test_scenes/case6/: caramel_test4.exr  caramel_test_hitpos.exr  caramel_test_normal.exr  normal_gt.exr  test.exr  test.xml  test_hitpos.xml
test_scenes/cbox/: cbox.exr  cbox.json  cbox.xml
test_scenes/logo/: cbox.exr  cbox.xml
test_scenes/logo/font1/: links.txt
test_scenes/logo/font2/: links.txt
test_scenes/logo/jar/: links.txt
test_scenes/logo/liquid/: links.txt
